fixtures/typescript/fallback/should_fail/lookup_else_default.tsx
export function readToolUseId(toolUse: Record<string, string>) {
  return "toolUseId" in toolUse ? toolUse["toolUseId"] : <span>tool</span>;
}
